# 04_LAB_Q-jslee

./: .gitignore  README.md  pyproject.toml
backend/config/: urls.py
backend/config/settings/: base.py  development.py
backend/flooding/: apps.py  models.py  urls.py  views.py
backend/flooding/management/commands/: insert_gu_name.py
backend/region/: models.py  serializers.py  urls.py  views.py
backend/region/management/commands/: insert_gu_name.py
backend/region/migrations/: 0001_initial.py
backend/utils/: __init__.py
res/csv/: seoul_rainfall_unique.pkl  seoul_water_level_unique.pkl
